[gd_scene load_steps=12 format=3 uid="uid://b1c6s2ubi4s14"]

[ext_resource type="Theme" uid="uid://b0p0ob7fjocdi" path="res://menu/theme.tres" id="1_2s831"]
[ext_resource type="Script" path="res://menu/menu.gd" id="1_64vu6"]
[ext_resource type="Texture2D" uid="uid://dklluqmulsp3v" path="res://water.jpg" id="2_4uski"]
[ext_resource type="Texture2D" uid="uid://bkywbgyceqou3" path="res://logo.png" id="2_l2uwx"]
[ext_resource type="Script" path="res://menu/grab_focus.gd" id="2_wha06"]
[ext_resource type="Script" path="res://scroll_bg.gd" id="3_04q4x"]
[ext_resource type="Script" path="res://menu/best_time.gd" id="4_2xa7r"]
[ext_resource type="Script" path="res://menu/free_on_web.gd" id="5_lrrnt"]
[ext_resource type="Script" path="res://menu/volume_slider.gd" id="6_vu4iu"]
[ext_resource type="AudioStream" uid="uid://d2jlut6qtmfh5" path="res://sfx/drop.ogg" id="7_w642u"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u4j1d"]
blend_mode = 1

[node name="menu" type="Node2D"]
script = ExtResource("1_64vu6")
gameplay_scene = "res://gameplay1.tscn"
gameplay_scene2 = "res://gameplay2.tscn"
gameplay_scene3 = "res://gameplay3.tscn"
how_to_play_scene = "res://menu/how_to_play.tscn"
credits_scene = "res://menu/credits.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 384)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_l2uwx")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2

[node name="play" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_2s831")
text = "boss: Blobby"
script = ExtResource("2_wha06")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_2s831")
text = "not beaten"
horizontal_alignment = 1
script = ExtResource("4_2xa7r")
boss_name = "blobby"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2

[node name="play" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_2s831")
text = "boss: Blorbit"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_2s831")
text = "not beaten"
horizontal_alignment = 1
script = ExtResource("4_2xa7r")
boss_name = "blorbit"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2

[node name="play" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_2s831")
text = "boss: Blazer"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer3/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_2s831")
text = "not beaten"
horizontal_alignment = 1
script = ExtResource("4_2xa7r")
boss_name = "blazer"

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer4/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_2s831")
text = "Volume"
horizontal_alignment = 1

[node name="volume_slider" type="HSlider" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("1_2s831")
max_value = 1.0
step = 0.1
script = ExtResource("6_vu4iu")

[node name="toggle_fullscreen" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_2s831")
text = "Toggle Fullscreen"

[node name="how_to_play" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_2s831")
text = "How to Play"

[node name="credits" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_2s831")
text = "Credits"

[node name="quit" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_2s831")
text = "quit"
script = ExtResource("5_lrrnt")

[node name="bg" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.247059)
z_index = -4096
texture_repeat = 2
material = SubResource("CanvasItemMaterial_u4j1d")
texture = ExtResource("2_4uski")
region_enabled = true
region_rect = Rect2(0, 0, 80960, 80960)
script = ExtResource("3_04q4x")
vel = Vector2(128, 96)

[node name="bg2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.247059)
z_index = -4096
texture_repeat = 2
material = SubResource("CanvasItemMaterial_u4j1d")
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_4uski")
region_enabled = true
region_rect = Rect2(0, 0, 80960, 80960)
script = ExtResource("3_04q4x")
vel = Vector2(-42, -69)

[node name="camera" type="Camera2D" parent="."]

[node name="drop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_w642u")
volume_db = -8.0
autoplay = true

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/play" to="." method="on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer2/play" to="." method="on_play2_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer3/play" to="." method="on_play3_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/toggle_fullscreen" to="." method="on_toggle_fullscreen_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/how_to_play" to="." method="on_how_to_play_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/credits" to="." method="on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/quit" to="." method="on_quit_pressed"]
